20 June 2007: Wouter
	- new -C option to enable coredumps after forking away.
	- doc update.
	- fixup CNAME generation by scrubber, and memory allocation of it.
	- fixup deletion of serviced queries when all callbacks delete too.
	- set num target queries to 0 when you move them to slumber list.
	- typo in check caused subquery errors to be ignored, fixed.
	- make lint happy about rlim_t.

19 June 2007: Wouter
	- nicer layout in stats.c, review 0.3 change.
	- spelling improvement, review 0.3 change.
	- uncapped timeout for server selection, so that very fast or slow
	  servers will stand out from the rest.
	- target-fetch-policy: "3 2 1 0 0" config setting.
	- fixup queries answered without RD bit (for root prime results).
	- refuse AXFR and IXFR requests.
	- fixup RD flag in error reply from iterator. fixup RA flag from
	  worker error reply.
	- fixup encoding of very short edns buffer sizes, now sets TC bit.
	- config options harden-short-bufsize and harden-large-queries.

18 June 2007: Wouter
	- same, move subqueries to slumber list when first has resolved.
	- fixup last fix for duplicate callbacks.
	- another offbyone in targetcounter. Also in Java prototype by the way.

15 June 2007: Wouter
	- if a query asks to be notified of the same serviced query result
	  multiple times, this will succeed. Only one callback will happen;
	  multiple outbound-list entries result (but the double cleanup of it
	  will not matter).
	- when iterator moves on due to CNAME or referral, it will remove
	  the subqueries (for other targets). These are put on the slumber
	  list.
	- state module wait subq is OK with no new subqs, an old one may have
	  stopped, with an error, and it is still waiting for other ones.
	- if a query loops, halt entire query (easy way to clean up properly).

14 June 2007: Wouter
	- num query targets was > 0 , not >= 0 compared, so that fetch
	  policy of 0 did nothing.

13 June 2007: Wouter
	- debug option: configure --enable-static-exe for compile where